<resources>
    <string name="app_name">Tykle</string>

    <!-- walk through -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="short_message">Lorem Ipsum </string>

    <!--otp messages-->
    <string name="otp_message">Fine! You should receive a text message from us shortly. </string>
    <string name="otp_message_s">Please enter the verification code you receive </string>
    <string name="otp_resend">Did not receive a code? Resend Code </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="you_don_t_have">You don\'t have  enough tickle.\nPlease Purchase the tickle</string>
    <string name="valid_thru">VALID\nTHRU</string>
    <string name="enter_email">Enter your email below to</string>
    <string name="email_after">receive your password reset instructions </string>

    //permission

    <string name="rationale_record_app">This app must needs access to your device Location Permission</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="terms_conditions">I have read the  <u>Terms &amp; Conditions</u>  pertaining to Baggage Policy</string>
    <string name="rationale_Camera_app">This app must needs access to your device camera Permission</string>
    ///facebook integration
    <string name="facebook_app_id">2309560405971508</string>
    <!--<string name="facebook_app_id">2309560405971508</string>-->
    <string name="fb_login_protocol_scheme">fb2309560405971508</string>

    <string name="NOTIFICATION_ID_KEY">NOTIFICATION_ID_KEY</string>
    <string name="NOTIFICATION_ROOM_ID_KEY">NOTIFICATION_ROOM_ID_KEY</string>
    <string name="DIRECT_REPLY_RESULT_KEY">DIRECT_REPLY_RESULT_KEY</string>
    <string name="location_filters">Location Filters</string>
    <string name="above_18">Above 18</string>
    <string name="_20_30">20-30</string>
    <string name="_30_40">30-40</string>
    <string name="_40_50">40-50</string>
    <string name="age_filters">Age Filters</string>
    <string name="nearby_to_50km">Nearby to 50Km</string>
    <string name="_50km_to_100km">50Km to 100Km</string>
    <string name="_100km_150km">100Km to 150Km</string>
    <string name="_200km_to_250km">200Km to 250Km</string>
    <string name="looking_for">Looking for</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="apply">Apply</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="age">Age</string>

    <string name="user_details">User Details</string>
    <string name="users">Users</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_log_out_msg">User successfully logout!</string>
    <string name="user_successfully_sign_in">User was successfully sign in!</string>

    <string name="signed_in">Signed In</string>
    <string name="not_signed_in">Not Signed In</string>

    <string name="select">Select User</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="check">Check</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="update">Updated!</string>

    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="alex_bass">Alex Bass</string>
    <string name="alex_full">Alex "the King" Bass</string>
    <string name="alex_email">alex@bass.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="tags">Tags</string>

    <string name="confirm_password">Confirm password</string>
    <string name="confirm_error">Passwords does not match!</string>
    <string name="error">error</string>
    <string name="errors">Errors</string>
    <string name="error_field_is_empty">Field is empty!</string>


    <string name="chat_sample">Chat Sample</string>

    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>

    <string name="dlg_loading">Loading</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_restoring_chat_session_logout">Restoring session and logout</string>
    <string name="create_chat">Creating chat…</string>
    <string name="loading_chat">Loading chat…</string>
    <string name="dlg_login">Login…</string>

    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>

    <string name="login_title">@string/chat_sample</string>

    <string name="splash_app_title">@string/chat_sample</string>
    <string name="splash_create_session_error">Create session errors:</string>

    <string name="login_select_user_for_login">Select User for Login to Chat</string>
    <string name="login_cant_obtain_users">Can\'t obtain users errors</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>

    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>

    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>

    <string name="chat_sticker">Sticker</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_me">Me</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_join_error">Error join group chat</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_history_error">Load chat history errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>

    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>

    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>

    <string name="sender_id">647783175343</string>
    <string name="upload_your_images">Upload your Images</string>
    <string name="you_can_add_upto_4_images_in_your_profile">You can add upto 4 images in your Profile</string>
    <string name="upload">Upload</string>

</resources>
