<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@color/colorbase"
    tools:context="com.tykle.activity.WalktThroughActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.tykle.adapter.NonSwipeableViewPager
            android:id="@+id/intro_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5" />

    <RelativeLayout
        android:layout_gravity="center|bottom"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_20"
            android:weightSum="3"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/slide_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/slider_u" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/slide_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/slider_u" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/slide_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/slider_u" />

            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/next_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/spacing_10"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_18" />

        <TextView
            android:id="@+id/previous_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/spacing_10"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_18"
            android:visibility="gone" />

        <TextView
            android:id="@+id/skip_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/spacing_10"
            android:text="@string/skip"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_18" />

    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
