<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:weightSum="10"
    android:id="@+id/parentPanel"
    tools:context="com.tykle.activity.OtpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Verify Mobile"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize_20" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:src="@drawable/mobile_otp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_marginEnd="@dimen/spacing_10"
        android:layout_marginStart="@dimen/spacing_10"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom|center"
            android:text="@string/otp_message"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_message_s"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_16" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_30"
            android:gravity="center"
            android:text="Enter Code Here"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_18" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textSize_15"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                android:layout_weight="1"
                android:background="@drawable/white_background">

                <EditText
                    android:id="@+id/otp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:maxLength="1"
                    android:inputType="number"
                    android:padding="@dimen/spacing_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                android:layout_weight="1"
                android:background="@drawable/white_background">

                <EditText
                    android:id="@+id/otp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/colorWhite"
                    android:padding="@dimen/spacing_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                android:layout_weight="1"
                android:background="@drawable/white_background">

                <EditText
                    android:id="@+id/otp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:maxLength="1"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:padding="@dimen/spacing_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5"
                android:layout_marginStart="@dimen/spacing_5"
                android:layout_weight="1"
                android:background="@drawable/white_background">

                <EditText
                    android:id="@+id/otp4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:maxLength="1"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:padding="@dimen/spacing_5" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_30"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/resend_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_10"
            android:gravity="bottom|center"
            android:text="@string/otp_resend"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize_16" />
    </LinearLayout>

</LinearLayout>
